name:                DHT
version:             0.2.0.0
synopsis:            Kademlia-like Distributed HashTable
description:         An API for a distributed HashTable built on a small set of
                     core commands and abstracted over dependencies such as
                     messaging, routing, storage and logging.
-- license:
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
-- copyright:
category:            DHT
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     DHT
                     , DHT.Bucket
                     , DHT.Command
                     , DHT.Contact
                     , DHT.ID
                     , DHT.Message
                     , DHT.Op
                     , DHT.Op.Messaging
                     , DHT.Op.RoutingTable
                     , DHT.Op.ValueStore
                     , DHT.Routing
                     , DHT.Types
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , hashable
                     , network
                     , string-conv
                     , random
                     , time
                     , word8

  ghc-options:        -fwarn-unused-imports
  if impl(ghc >= 8.0.0)
    ghc-options:      -Whi-shadowing
  else
    ghc-options:      -fwarn-hi-shadowing
                      -fwarn-tabs
                      -threaded
  -- hs-source-dirs:
  default-language:    Haskell2010

