name:                DHT
version:             0.4.0.0
synopsis:            Kademlia-like Distributed HashTable
description:         An API for a distributed HashTable built on a small set of
                     core commands and abstracted over dependencies such as
                     messaging, routing, storage and logging.
-- license:
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
-- copyright:
category:            DHT
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     DHT

                     , DHT.Core
                     , DHT.Core.Address
                     , DHT.Core.Bits
                     , DHT.Core.Bucket
                     , DHT.Core.Contact
                     , DHT.Core.ID
                     , DHT.Core.Routing
                     , DHT.Core.Types

                     , DHT.Protocol
                     , DHT.Protocol.Command
                     , DHT.Protocol.Message

                     , DHT.Client
                     , DHT.Client.Op
                     , DHT.Client.Op.Messaging
                     , DHT.Client.Op.RoutingTable
                     , DHT.Client.Op.ValueStore
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , deepseq
                     , hashable
                     , network
                     , string-conv
                     , random
                     , time
                     , word8

  ghc-options:        -fwarn-unused-imports
  if impl(ghc >= 8.0.0)
    ghc-options:      -Whi-shadowing
  else
    ghc-options:      -fwarn-hi-shadowing
                      -fwarn-tabs
                      -threaded
  -- hs-source-dirs:
  default-language:    Haskell2010

test-suite hspec
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    Test

  other-modules:     DHT.Test.AddressSpec
                   , DHT.Test.BitsSpec
                   , DHT.Test.IDSpec
                   , DHT.Test.ContactSpec
                   , DHT.Test.BucketSpec
                   , DHT.Test.RoutingSpec

  build-depends:     base
                   , DHT
                   , QuickCheck
                   , containers >=0.5
                   , hedgehog
                   , hashable
                   , hspec
                   , quickcheck-instances
                   , semigroups
                   , bytestring
                   , text
                   , deepseq
                   , mtl
                   , ghc-prim

  default-language:  Haskell2010

  other-extensions:  OverloadedStrings

