name:                DHT-SimpleNode
version:             0.3.0.0
synopsis:            A simple concrete implementation of the DHT package.
description:         Makes simple choices for instantiating a DHT node using the
                     DHT API. Particularly uses: UDP, MVars, DHT.Routing and
                     in-memory HashMaps for data storage, etc.
-- license:
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
-- copyright:
category:            DHT
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     DHT.SimpleNode
                     , DHT.SimpleNode.Logging
                     , DHT.SimpleNode.Messaging
                     , DHT.SimpleNode.RoutingTable
                     , DHT.SimpleNode.ValueStore

  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , hashable
                     , network
                     , random
                     , time
                     , word8
                     , DHT
  -- hs-source-dirs:
  default-language:    Haskell2010

  ghc-options:         -threaded
