cabal-version:       3.8
name:                DHT-SimpleNode-Example
version:             0.3.0.0
synopsis:            Example of using DHT-SimpleNode (which is in turn an example of instantiating DHT)
description:         Run several DHT.SimpleNode's (which makes the choice of using UDP,MVars,DHT.Routing and in memory Maps to store data)
                     to test storing and looking up data and neighbours.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
-- copyright:
-- category:
build-type:          Simple
--extra-source-files:

executable DHT-SimpleNode-Example
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings
  build-depends:       base,
                       bytestring,
                       string-conv,
                       DHT,
                       DHT-SimpleNode
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -threaded
